🎨 fix UI problems in participants page - fix pagination button wrapping to next line on medium sized screens - fix cards overlapping on small screens

--- a/src/app/components/publiclists/teamlist/teamlist.component.scss
+++ b/src/app/components/publiclists/teamlist/teamlist.component.scss
@@ -161,3 +161,9 @@ span.link-team-user {
     margin-top: 30px;
   }
 }
+
+@media only screen and (max-width: $small-screen) {
+  .margin-on-small {
+    margin-top: 15px;
+  }
+}
